# marketing-automation

./: .dockerignore  .env.example  .env.local.example  .gitignore  AGENTS.md  CLAUDE.md  CLERK_SETUP_GUIDE.md  DEPLOYMENT.md  Dockerfile  GEMINI.md  MIGRATION_EXECUTION_STEPS.md  Makefile  README.md  STRIPE_SETUP_GUIDE.md  SUPABASE_MIGRATION_GUIDE.md  bun.lockb  diff.txt  docker-compose.yml  imagen4_test_report.md  kong.yml  package-lock.json  package.json  security-report.md  setup-realtime.md  test_imagen4.py  test_safety_prompts.py
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  README_IMAGE_GENERATION.md  agents_logging_integration.py  main.py  pyproject.toml  requirements.txt  test_client.html  test_regex.py
backend/api/: notion_sync.py
backend/api/endpoints/: article.py  article_flow.py  company.py  organization.py  style_templates.py
backend/app/api/: router.py
backend/app/common/: admin_auth.py  auth.py  database.py  schemas.py
backend/app/core/: config.py  exceptions.py  llm_provider.py  ngrok_manager.py
backend/app/debug/: __init__.py  gradio_console.py
backend/app/evals/: __init__.py  datasets.py  model.py  run_eval.py  scorers.py
backend/app/infrastructure/: README.md  admin_audit_logger.py  clerk_client.py  cloud_tasks.py  gcp_auth.py  realtime_sync.py  stripe_client.py
backend/core/: auth.py  config.py  logger.py
backend/database/: supabase_client.py
backend/docs/: ARTICLE_GENERATION_FLOW_DOCUMENTATION.md  PAYLOAD_CONVERSION_TEST_RESULTS.md
backend/models/: company_info.py
backend/routers/: image_generation.py  images.py
backend/schemas/: request.py  response.py
backend/services/: agents.py  article_flow_service.py  article_service.py  company_service.py  content_analyzer.py  context.py  cost_calculation_service.py  gcs_service.py  image_generation_service.py  logging_service.py  models.py  notion_service.py  notion_sync_service.py  organization_service.py  serpapi_service.py  tools.py
backend/testing/: analyze_blog_prompt_cache.py  apply_fix_migration.py  backfill_blog_tool_logs_from_trace.py  check_actual_snapshots.py  check_snapshot_table.py  cleanup_blog_trace_delta_events.py  cleanup_duplicate_snapshots.py  cleanup_invalid_snapshots.py  verify_blog_trace_logs.py
backend/tests/: test_auto_mode.py  test_blog_content_normalizer.py  test_blog_memory_tdd.py  test_client.html  test_codex_patch.py  test_common_auth.py  test_common_schemas.py  test_company_endpoints.py  test_company_memory_service.py  test_company_service.py  test_image_generation_endpoints.py  test_image_generation_service.py  test_infrastructure_gcs_service.py  test_infrastructure_serpapi_service.py  test_llm_provider.py  test_logging_system.py  test_notion_fixes.py  test_notion_sync.py  test_payload_conversion_method.py  test_research_agent.py  test_style_template_endpoints.py  test_system_prompt_extraction.py
backend/utils/: auth.py  gcp_auth.py
seo_agent_cli/: pyproject.toml
seo_agent_cli/app/: state_machine.py  workflow_manager.py
seo_agent_cli/cli/: main.py
seo_agent_cli/core/: context.py  schemas.py
seo_agent_cli/docs/: arch_guide.md  react_loop_comprehensive_guide.md
seo_agent_cli/prompts/: __init__.py  editor.md  keyword_analyzer.md  outline_generator.md  persona_generator.md  research_planner.md  research_synthesizer.md  researcher.md  section_writer.md  theme_generator.md
(+733 files in other folders)
