[project]
name = "saas-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "openai-agents",
    "python-dotenv",
    "rich",
    "sse-starlette",
    "pydantic-settings",
    "griffe",
    "beautifulsoup4",
    "google-search-results",
    "supabase",
    "pydantic[email]",
    "google-generativeai>=0.8.0,<0.9.0",
    "google-cloud-aiplatform>=1.100.0,<2.0.0",
    "google-auth>=2.20.0,<3.0.0",
    "pillow",
    "aiofiles",
    "google-cloud-storage>=2.10.0,<3.0.0",
    "pyjwt",
    "psycopg2-binary",
    "sqlalchemy",
    "ruff",
    "numpy>=1.26.0,<2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
