[project]
name = "saas-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "openai-agents",
    "python-dotenv",
    "rich",
    "sse-starlette",
    "pydantic-settings",
    "griffe",
    "beautifulsoup4",
    "google-search-results",
    "supabase",
    "pydantic[email]",
    "google-generativeai",
    "google-cloud-aiplatform",
    "google-auth",
    "pillow",
    "aiofiles",
    "google-cloud-storage",
    "pyjwt",
    "psycopg2-binary",
    "sqlalchemy",
    "ruff",
    "numpy",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
