[project]
name = "saas-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "openai",
    "openai-agents",
    "python-dotenv",
    "rich",
    "sse-starlette",
    "pydantic-settings",
    "griffe",
    "beautifulsoup4",
    "google-search-results",
    "supabase",
    "pydantic[email]",
    "google-generativeai",
    "google-cloud-aiplatform",
    "google-auth",
    "pillow",
    "aiofiles",
    "google-cloud-storage",
    "pyjwt",
    "psycopg2-binary",
    "sqlalchemy",
    "ruff",
    "numpy",
    "httpx",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
# E402: module level import not at top - many existing files use late imports intentionally
# E701: multiple statements on one line - style preference in existing code
# E741: ambiguous variable name - used in codex_patch.py comprehensions
# F823: local variable referenced before assignment - false positive in complex flow manager
ignore = ["E402", "E701", "E741", "F823"]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
